# Bitcoin-Script-Explorer

./: .gitignore  README.md  render.yaml
backend/: Cargo.toml
backend/src/: crypto.rs  engine.rs  fetcher.rs  main.rs  opcode.rs  parser.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ExecutionTrace.css  ExecutionTrace.tsx  LandingHero.css  LandingHero.tsx  OpcodeDictionary.css  OpcodeDictionary.tsx  ScriptPanel.css  ScriptPanel.tsx  SearchBar.css  SearchBar.tsx  TxMeta.css  TxMeta.tsx
frontend/src/hooks/: useTransaction.ts
frontend/src/types/: index.ts
