[package]
name = "btc-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum — Rust's most ergonomic web framework. Built on tokio + hyper.
# Tower middleware system: routing, extractors, responses.
axum = { version = "0.7", features = ["json"] }

# tokio — async runtime (same as before)
tokio = { version = "1", features = ["full"] }

# tower-http — middleware for axum: CORS, static files, logging
tower-http = { version = "0.5", features = ["cors"] }

# reqwest — HTTP client to proxy mempool.space
reqwest = { version = "0.11", features = ["json"] }

# serde — serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sha2 + ripemd — real crypto for OP_HASH160
sha2 = "0.10"
ripemd = "0.1"

# hex — encode/decode hex strings
hex = "0.4"
